--- a/style.css
+++ b/style.css
@@ -45,7 +45,6 @@ main {
   font-size: 2rem;
 }
 
-/* ELEMENTS STYLE */
 h1 {
   font-size: 4rem;
   text-align: center;
@@ -116,4 +115,62 @@ h1 {
 
 .label-score {
   margin-bottom: 2rem;
+}
+
+@media screen and (max-width: 500px) {
+  header {
+    height: 30vh;
+  }
+
+  .left {
+    margin-bottom: 15px;
+  }
+
+  h1 {
+    font-size: 2.5rem;
+  }
+
+  .between {
+    font-size: 1rem;
+  }
+
+  .btn {
+    font-size: 1.5rem;
+    padding: 15px 20px;
+  }
+
+  .number {
+    width: 10rem;
+    font-size: 4rem;
+  }
+
+  .guess {
+    width: 20rem;
+    font-size: 3rem;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  main {
+    height: auto;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 100px;
+  }
+
+  .right {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .message {
+    margin-bottom: 0;
+    padding: 25px 0;
+  }
+
+  .label-score {
+    margin: 0;
+    padding: 25px 0;
+  }
 }
